<resources>
    <string name="app_name">Test app</string>
    <string name="text_empty" />

    <!-- Titles -->
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="profile">Profile</string>
    <string name="trade_by_data">Trade by <annotation color="data">data</annotation></string>

    <!-- Sign in & Welcome back-->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="have_account">Already have an account?  <annotation color="log_in">Log in</annotation></string>
    <string name="no_account">Don\'t you have an account?  <annotation color="sign_in">Sign in</annotation></string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_apple">Sign in with Apple</string>

    <!-- Errors texts -->
    <string name="empty_text">Text field is empty</string>
    <string name="email_no_correct">Email is not correct </string>
    <string name="no_user">This user does not exist</string>
    <string name="user_already_registered">This user is already registered</string>
    <string name="database_error">Database error</string>
    <string name="no_internet">No network connection!</string>
    <string name="server_error">Server error</string>
    <string name="client_error">Not enough data to search :(</string>
    <string name="unknown_error">Unknown error, sorry :(</string>
    <string name="not_found">Result not found</string>


    <!-- Profile -->
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>

    <!-- Trade by data -->
    <string name="location">Location</string>
    <string name="what_you_looking">What are you looking for ?</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="view_all">View all</string>
    <string name="latest">Latest</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="price">$ %1$s</string>
    <string name="discount">%1$s %% off</string>

    <!-- More details -->
    <string name="color">Color:</string>
    <string name="count_reviews">(%1$s reviews)</string>
    <string name="rating"><b>%1$s</b> (%2$s reviews)</string>
    <string name="quantity">Quantity: %1$s</string>
    <string name="add_cart">add to cart</string>
    <string name="some_id">#2,500</string>
    <string name="market">Market</string>
    <string name="messages">Messages</string>
    <string name="favorite">Favorite</string>
    <string name="old_sale">Old sale</string>
    <string name="try_again">Try again</string>
    <string name="one">1</string>
    <string name="share_friends">Share with friends</string>
    <string name="share_this">Share this</string>
</resources>