<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modules.signin.SignInFragment">

    <TextView
        android:id="@+id/sign_in_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black_600"
        android:textSize="@dimen/text_size_26"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="@dimen/view_size_289"
        android:layout_height="@dimen/view_size_29"
        android:autofillHints=""
        android:background="@drawable/auth_field_background"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_580"
        android:textSize="@dimen/text_size_11"
        android:layout_marginTop="@dimen/margin_72"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_header" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="@dimen/view_size_289"
        android:layout_height="@dimen/view_size_29"
        android:autofillHints=""
        android:background="@drawable/auth_field_background"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_580"
        android:paddingHorizontal="@dimen/padding_16"
        android:textSize="@dimen/text_size_11"
        android:layout_marginTop="@dimen/margin_35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="@dimen/view_size_289"
        android:layout_height="@dimen/view_size_29"
        android:autofillHints=""
        android:background="@drawable/auth_field_background"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_580"
        android:textSize="@dimen/text_size_11"
        android:layout_marginTop="@dimen/margin_35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <TextView
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/view_size_289"
        android:layout_height="@dimen/view_size_46"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_in"
        android:textColor="@color/white_500"
        android:background="@drawable/auth_button_state"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/have_account"
        android:textColor="@color/gray_550"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginStart="@dimen/margin_65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginStart="@dimen/margin_6"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/log_in"
        android:textColor="@color/blue_500"
        android:textSize="@dimen/text_size_10"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/have_account"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <LinearLayout
        android:id="@+id/other_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_76"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have_account">

        <LinearLayout
            android:id="@+id/google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                android:layout_marginEnd="@dimen/margin_12"/>
            <TextView
                android:id="@+id/sign_in_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sign_in_google"
                android:layout_gravity="center"
                android:textColor="@color/black_600"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/apple_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_36">
            <ImageView
                android:id="@+id/apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/apple"
                android:layout_marginEnd="@dimen/margin_12"/>
            <TextView
                android:id="@+id/sign_in_apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sign_in_apple"
                android:layout_gravity="center"
                android:textColor="@color/black_600"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>