<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/view_size_117"
    android:background="@drawable/bottom_sheet_more_background">

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="@dimen/text_size_9"
        android:textColor="@color/gray_550"
        android:layout_marginTop="@dimen/margin_14"
        android:layout_marginStart="@dimen/margin_24"
        />

    <ImageButton
        android:id="@+id/negative_button"
        android:layout_width="@dimen/text_size_38"
        android:layout_height="@dimen/text_size_22"
        android:src="@drawable/minus"
        android:background="@drawable/button_bottom_sheet"
        android:layout_marginTop="@dimen/margin_38"
        android:layout_marginStart="@dimen/margin_24"/>

    <ImageButton
        android:id="@+id/positive_button"
        android:layout_width="@dimen/text_size_38"
        android:layout_height="@dimen/text_size_22"
        android:src="@drawable/plus"
        android:background="@drawable/button_bottom_sheet"
        android:layout_marginTop="@dimen/margin_38"
        android:layout_marginStart="@dimen/margin_83"
        app:tint="@color/white" />

    <FrameLayout
        android:id="@+id/add_cart"
        android:layout_width="@dimen/view_size_170"
        android:layout_height="@dimen/view_size_44"
        android:background="@drawable/auth_button_active"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_19"
        android:layout_marginEnd="@dimen/margin_23">

        <TextView
            android:id="@+id/add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_cart"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical|end"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_8"
            android:layout_marginEnd="@dimen/margin_30"/>
        <TextView
            android:id="@+id/itemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/some_id"
            android:textColor="@color/blue_300"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_8"
            android:layout_marginStart="@dimen/margin_28"/>
    </FrameLayout>

</FrameLayout>