<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/size_user_icon"
        android:layout_height="@dimen/size_user_icon"
        android:src="@drawable/avatar"
        android:layout_marginTop="@dimen/margin_19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="@dimen/padding_1"
        android:paddingHorizontal="@dimen/padding_1"
        app:shapeAppearance="@style/IconProfileStyle"
        app:strokeColor="@color/gray_450"
        app:strokeWidth="@dimen/stroke_width" />

    <TextView
        android:id="@+id/change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:textColor="@color/gray_550"
        android:textSize="@dimen/text_size_8"
        android:text="@string/change_photo"
        android:layout_marginTop="@dimen/margin_6"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:textColor="@color/gray_850"
        android:textSize="@dimen/text_size_15"
        android:text="@string/satria_adhi_pradana"
        android:layout_marginTop="@dimen/margin_17"
        app:layout_constraintTop_toBottomOf="@id/change_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/upload_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_name">

        <TextView
            android:id="@+id/upload_item_text"
            android:layout_width="@dimen/view_size_290"
            android:layout_height="@dimen/view_size_40"
            android:background="@drawable/auth_button_state"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white_500"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text_size_15"
            android:text="@string/upload_item"/>

        <ImageView
            android:id="@+id/upload_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="@dimen/padding_56"
            android:src="@drawable/upload"
            tools:ignore="RtlSymmetry"/>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_item_button" />

</androidx.constraintlayout.widget.ConstraintLayout>